# messages

./: dune-project  license.txt  messages.opam  messages_json.opam  messages_json_js.opam  readme.rst
example/: abstract.ml  custom.ml  dune  example.ml
src/common/: dune  messages.ml
src/json/: decode.ml  decode.mli  dune  encode.ml  encode.mli
src/json.js/: decode.ml  decode.mli  dune  encode.ml  encode.mli
